Added rswg DSL notation to the /api/blocks/render' path
